tugas-bootstrap-dwickydarmawan

--- a/tugas/gen-11-tugas-bootstrap-dwickydarmawan/style.css
+++ b/tugas/gen-11-tugas-bootstrap-dwickydarmawan/style.css
@@ -44,3 +44,9 @@
     background-color: #ff7400;
     color: white !important;
 }
+
+
+footer {
+    background-color: #ff7400;
+    color: white !important;
+}
